fixed white space on right bug added overflow hidden scroll and it was fixed

--- a/src/index.css
+++ b/src/index.css
@@ -5,19 +5,5 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: #6d6e70;
   background-color: white;
-}
-
-.scroll-to-top {
-  position: fixed;
-  bottom: 0.5rem;
-  right: 0.5rem;
-  cursor: pointer;
-}
-
-.arrowUp {
-  background-color: white;
-  color: #6d6e70;
-  font-size: 30px;
-  margin-right: 2vh;
-  border-radius: 3px;
+  overflow: hidden scroll;
 }
